# PV_ICE

./: .buildinfo  .gitattributes  .gitignore  LICENSE.md  MANIFEST.in  MassFlowCalculator v2.ipynb  MassFlowCalculator v2.py  MassFlowCalculator v3.ipynb  MassFlowCalculator v3.py  MassFlowCalculator.ipynb  MassFlowCalculator.py  PV_global_installations.xlsx  README.html  README.md  baseline_glass.xlsx  cla-1.0.md  genindex.html  intro.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.cfg~  setup.py  sign-cla.md
.ipynb_checkpoints/: MassFlowCalculator-checkpoint.ipynb
CEMFC/: __init__.py  delete.py  main.py
CircularEconomy-MassFlowCalculator/: __init__.py  main.py
CircularEconomy-MassFlowCalculator,egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
LICENSE.md/: LICENSE.md
PV-DEMICE/: __init__.py  _version.py  delete.py  main.py
PV_DEMICE/: __init__.py  _version.py  delete2.py  main.py  tim.py
PV_ICE/: __init__.py  _version.py  debug_degradation.py  main.py
Studies/: (dev) SIPS Repowering - Test1.html  (dev) SIPS Repowering - Test1.ipynb  (dev) SIPS Repowering - Test1.py  baseline_modules_mass_Repower_Resi2020.csv  baseline_modules_mass_Repower_Resi2024.csv
_sources/: README.md  intro.md
contributors/: heathermirletz.md  shirubana.md
docs/: _config.yml  _toc.yml  intro.md
tests/: baseline_material_mass_silicon_test_degradation.csv  baseline_material_sensitivitytest.csv  baseline_material_test.csv  baseline_material_test_2.csv  baseline_material_test_3.csv  baseline_module_test.csv  baseline_module_test_2.csv  test_main.py  (+5 more)
(+1266 files in other folders)
