# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = PV-DEMICE/_version.py
versionfile_build = PV-DEMICE/_version.py
tag_prefix = ''
parentdir_prefix = PV-DEMICE

[aliases]
test = pytest

# OPTIONAL AFTER THIS:
[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --verbose
